v1.0.3 - Major optimizations & Fixes.